# firstpyremotejob

./: Makefile  README.md  pyproject.toml
config/: settings.py
remotejobs/: apps.py  models.py
remotejobs/migrations/: 0001_initial.py
