[tool.poetry]
name = "firstpyremotejob"
version = "0.1.0"
description = ""
authors = ["ajib6ept <asalbert@narod.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"


[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
